[project]
name = "cherita-flask-api"
version = "1.3.0"
description = "A web service designed to provide a robust and scalable interface for managing and analyzing biological data."
authors = [
    { name = "Haniffa Lab", email = "noreply@haniffalab.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.14",
    "anndata==0.12.6",
    "Flask==2.3.2",
    "Flask-Caching==2.3.1",
    "flask-cors==6.0.1",
    "flask-restx==1.3.0",
    "fsspec==2023.5.0",
    "gcsfs==2023.5.0",
    "gunicorn==23.0.0",
    "kaleido==0.2.1",
    "plotly==5.14.1",
    "python-dotenv==1.0.1",
    "python-semantic-release==10.3.1",
    "redis==5.2.1",
    "requests==2.32.4",
    "s3fs==2023.5.0",
    "scipy==1.14.0",
    "zarr==3.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "config.py:version",
    "CITATION.cff:version",
]
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches]
main = { match = "main" }