[project]
name = "cherita-flask-api"
version = "1.3.0"
description = "A web service designed to provide a robust and scalable interface for managing and analyzing biological data."
authors = [
    { name = "Haniffa Lab", email = "noreply@haniffalab.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.3",
    "anndata==0.12.10",
    "Flask==3.1.3",
    "Flask-Caching==2.3.1",
    "flask-cors==6.0.2",
    "flask-restx==1.3.2",
    "fsspec==2026.2.0",
    "gcsfs==2026.2.0",
    "gunicorn==25.1.0",
    "kaleido==0.2.1",
    "plotly==6.6.0",
    "python-dotenv==1.2.2",
    "python-semantic-release==10.3.1",
    "redis==7.4.0",
    "requests==2.32.5",
    "s3fs==2026.2.0",
    "scipy==1.17.1",
    "zarr==3.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "config.py:version",
    "CITATION.cff:version",
]
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches]
main = { match = "main" }